# vscode-gp-coursera

./: README.md  items.db  items.yaml  pyproject.toml
src/: app.py  database.py  models.py
tests/: test_app.py
